yay I finally got all my graphs rendered and interactive!

--- a/data_wrangling.Rmd
+++ b/data_wrangling.Rmd
@@ -76,14 +76,14 @@ san_miguel_veg_summary <- manzanita_veg %>%
   mutate(Percent_Cover = as.numeric(Percent_Cover)) %>% 
   group_by(Pool, Species, date, Native_Status, Year) %>% 
   summarize(
-    mean_percentage = mean(Percent_Cover)
+    mean = mean(Percent_Cover)
   )
 
 # Veg col
 san_miguel_col <- san_miguel_veg_summary %>% 
   filter(Year == "2005") %>% 
   filter(Native_Status == "N" | Native_Status == "E") %>% 
-  ggplot(aes(x = Species, y = mean_percentage)) +
+  ggplot(aes(x = Species, y = mean)) +
   geom_col(aes(fill = Native_Status)) +
   theme_classic() +
   theme(axis.text.x = element_text(angle = 90)) +
@@ -93,32 +93,16 @@ san_miguel_col <- san_miguel_veg_summary %>%
 san_miguel_col
 
 
-# Aggregate percentages
-san_miguel_line <- ggplot(san_miguel_veg_summary, aes(x = Year, y = mean_percentage)) +
-  geom_line(aes(color = Species, group = Species)) +
-  theme(axis.text.x = element_text(angle = 90)) +
-  labs(title = "Percent Cover", x = "Date", y = "Mean Percent Cover")
-san_miguel_line
-
-# Central zone percentages
-
-
-# Transition zone percentages
-
-
-# Upland zone percentages
-
-
 # Native vs. exotic
 san_miguel_native <- san_miguel_veg_summary %>% 
   group_by(Pool, Native_Status, date, Year) %>% 
   summarize(
-    total = sum(mean_percentage)
+    total = sum(mean)
   ) %>%
   filter(Native_Status != 0)
 
 
-# Aggregate
+# Native vs. exotic lines over time
 san_miguel_native_line <- ggplot(san_miguel_native, aes(x = date, y = total)) +
   geom_line(aes(color = Native_Status, group = Native_Status)) +
    theme_classic() +
@@ -128,4 +112,285 @@ san_miguel_native_line <- ggplot(san_miguel_native, aes(x = date, y = total)) +
   labs(title = "Percent Cover", x = "Date", y = "Mean Percent Cover")
 san_miguel_native_line
 
+
+# Percentages of each species over time
+san_miguel_line <- ggplot(san_miguel_veg_summary, aes(x = Year, y = mean)) +
+  geom_line(aes(color = Species, group = Species)) +
+  theme(axis.text.x = element_text(angle = 90)) +
+  labs(title = "Percent Cover", x = "Date", y = "Mean Percent Cover")
+san_miguel_line
+
+
+
+
+
+
 ```
+
+
+North Parcel Tab
+# Tab 4: North Parcel
+             
+             tabPanel("North Parcel",
+                      h1("North Parcel"),
+                      h2("Hydroperiod Data"),
+                
+                      
+                      # Sidebar with a select input for pool and date range input 
+                      sidebarLayout(
+                        sidebarPanel(
+                          
+                          selectInput("pool", 
+                                      "Select vernal pool:",
+                                      choices = c("Phase 1", "Tadpole", "Redtail", "Whitetail 1", "Whitetail 2", "Creekside", "Mini South")),
+                          dateRangeInput("dates",
+                                         label = "Select date range"),
+                          
+                          hr(),
+                          fluidRow(column(4, verbatimTextOutput("value"))),
+                          radioButtons("graph", 
+                                       "Select graph:",
+                                       choices = c("Hydroperiod", "Vegetation Composition"))
+                        ),
+                        
+                        # Show a plot of the generated hydroperiod
+                        mainPanel(
+                          plotOutput("graph")
+                        )
+                      )),
+             
+             
+             
+             
+             
+             
+             
+
+
+
+
+
+
+#
+# This is a Shiny web application. You can run the application by clicking
+# the 'Run App' button above.
+#
+# Find out more about building applications with Shiny here:
+#
+#    http://shiny.rstudio.com/
+#
+
+library(shiny)
+library(tidyverse)
+library(shinythemes)
+library(RColorBrewer)
+library(knitr)
+library(kableExtra)
+
+# Manzanita data organization
+
+## Read in data
+manzanita_veg_master <- read_csv("manzanita_03_06_copy.csv")
+metadata_master <- read_csv("manz_metadata.csv")
+
+## Reformat metadata so it can be full_join-ed to data
+metadata <- metadata_master %>% 
+  rename(Species_Abbr = Species, Species = Species_Full_Name)
+
+## Convert manzanita_03_06 into tidy format, join with species metadata, convert day/month/year columns to "date" column, replace NAs with 0s
+manzanita_veg <- gather(filter(manzanita_veg_master, Pool != "NA"), key = "Transect_Distance", value = "Percent_Cover", -c(Pool, Day, Month, Year, Species, Transect_Direction))
+manzanita_veg <- full_join(manzanita_veg, metadata) %>% 
+  mutate(date = paste(Month, Year, sep="-" )) %>% 
+  mutate_all(funs(replace(., is.na(.), 0)))
+
+
+# Manzanita data wrangling
+## Aggregate San Miguel data
+san_miguel_veg_summary <- manzanita_veg %>% 
+  filter(Pool == "San Miguel") %>% 
+  filter(Percent_Cover != "x") %>% 
+  mutate(Percent_Cover = as.numeric(Percent_Cover)) %>% 
+  group_by(Pool, Species, date, Native_Status, Year) %>% 
+  summarize(
+    mean_percentage = mean(Percent_Cover)
+  )
+
+## Native vs. exotic San Miguel data
+san_miguel_native <- san_miguel_veg_summary %>% 
+  group_by(Pool, Native_Status, date, Year) %>% 
+  summarize(
+    total = sum(mean_percentage)
+  ) %>%
+  filter(Native_Status != 0)
+veg_line <- ggplot(san_miguel_native, aes(x = date)) +
+  geom_line(aes(y = total, color = Native_Status, group = Native_Status)) +
+  theme_classic() +
+  theme(axis.text.x = element_text(angle = 90)) +
+  scale_color_manual(values = c("firebrick", "darkgreen"), name = "Native Status", label = c("Exotic", "Native")) +
+  scale_y_continuous(expand = c(0,0)) +
+  labs(title = "Percent Cover", x = "Date", y = "Mean Percent Cover")
+veg_line
+
+# Define UI for application that draws a histogram
+ui <- fluidPage(
+  theme = shinytheme("cerulean"),
+  
+  # Application title
+  titlePanel("CCBER Vernal Pools"),
+  
+  navbarPage("Welcome!",
+             
+             # Tab 1: Summary and map
+             
+             tabPanel("Summary/Map",
+                      h1("Summary/Map"),
+                      h2("Summary"),
+                      p("Vernal pool restoration around UCSB has been ocurring since the mid-1980s.  The Cheadle Center for Biodiversity Ecological Restoration (CCBER) was formed in 2005 as the official mitigation engine for UCSB.  As UCSB continues to expand its campus and student/faculty housing, CCBER has been tasked with implementing restoration projects as mitigation."),
+                      p("The vernal pools at Manzanita Village were created in 2005."),
+                      h2("Map of Manzanita Vernal Pools"),
+                      img(src="manzanita_map.png", align = "left", height = 500)
+                      
+             ),
+             
+             
+             # Tab 2: Hydroperiod line graphs
+             
+             tabPanel("Pool Hydroperiod",
+                      h1("Pool Hydroperiod"),
+                      h2("Hydroperiod Data"),
+                      p("Hydroperiod data is collected on a weekly basis during the rainy season by recording the water level based on a measuring gauge installed in the deepest point in each pool."),
+                      
+                      # Sidebar with a select input for pool and date range input 
+                      sidebarLayout(
+                        sidebarPanel(
+                          
+                          selectInput("pool", 
+                                      "Select vernal pool:",
+                                      choices = c("San Miguel","Santa Rosa","Santa Cruz", "Santa Barbara", "Santa Catalina")),
+                          dateRangeInput("dates",
+                                         label = "Select date range"),
+                          
+                          hr(),
+                          fluidRow(column(4, verbatimTextOutput("value")))
+                        ),
+                        
+                        # Show a plot of the generated hydroperiod
+                        mainPanel(
+                          plotOutput("hydroperiod"),
+                          img(src="hydro.png", align = "left")
+                        )
+                      )),
+             
+             
+             # Tab 3: Vegetation column graphs
+
+             tabPanel("Pool Vegetation Composition",
+                      h1("Pool Vegetation Composition"),
+                      h2("Vegetation Monitoring Data"),
+                      p("Vegetation data is collected in the summer via transect sampling.  Each pool has a permanent transect running along the diameter of the pool.  Meter-square quadrats are placed every 2 meters.  In each quadrat, percent cover of each plant species present is recorded."),
+                      
+                      # Sidebar with a select input for pool and radio button input for year 
+                      sidebarLayout(
+                        sidebarPanel(
+                          
+                          selectInput("pool", 
+                                      "Select vernal pool:",
+                                      c("San Miguel","Santa Rosa","Santa Cruz", "Santa Barbara", "Santa Catalina")
+                          )
+                        ),
+                        
+                        # Show a plot of the generated column graph
+                        mainPanel(
+                          plotOutput(outputId = "veg_col")
+                        )
+                      )),
+             
+             
+             
+             # Tab 5: Native vs. exotic species line graphs
+             
+             tabPanel("Native vs. Exotic Vegetation Trends",
+                      h1("Native vs. Exotic Vegetation Trends"),
+                      h2("Vegetation Monitoring Data"),
+                      p("Vegetation data is collected in the summer via transect sampling.  Each pool has a permanent transect running along the diameter of the pool.  Meter-square quadrats are placed every 2 meters.  In each quadrat, percent cover of each plant species present is recorded."),
+                      
+                      # Sidebar with a select input for pool and radio button input for year 
+                      sidebarLayout(
+                        sidebarPanel(
+                          selectInput("pool", 
+                                      "Select vernal pool:",
+                                      choices = c("San Miguel","Santa Rosa","Santa Cruz", "Santa Barbara", "Santa Catalina"))
+                        ),
+                        
+                        # Show a plot of the generated column graph
+                        mainPanel(
+                          plotOutput(veg_line),
+                          img(src="graph.png", align = "left")
+                        )
+                      ))
+             
+  ))
+  
+
+
+
+
+
+
+
+
+
+
+# Define server logic
+server <- function(input, output) {
+  output$hydroperiod <- renderPlot({
+    # generate pool based on input$pool from ui.R (X replace faithful with df)
+    p <- ggplot(unannualized_subset(), aes(x = stock)) + 
+      geom_histogram(binwidth=.005, fill = "#383837") + 
+      geom_density(color="blue", fill="white", alpha=.03) + 
+      scale_x_continuous(labels=percent) + 
+      scale_y_discrete(breaks=pretty_breaks()) + 
+      labs(x = paste(toupper(input$ticker), " returns"), y = "observations",
+           title = paste(toupper(input$ticker), " ", input$freq, " returns distribution (", dates_out()[[1]], " to ", dates_out()[[2]], ")\n", sep="")) + 
+      ggplot_theme
+    print(p)
+  })
+  
+  output$veg_col <- renderPlot({
+    # generate pool based on input$pool from ui.R
+    veg <- manzanita_veg %>% 
+      filter(Pool == input$pool) %>% 
+      filter(Percent_Cover != "x") %>% 
+      mutate(Percent_Cover = as.numeric(Percent_Cover)) %>% 
+      group_by(Pool, Species, date, Native_Status, Year) %>% 
+      summarize(
+        mean = mean(Percent_Cover)
+      ) %>% 
+      filter(Year == "2005") %>% 
+      filter(Native_Status == "N" | Native_Status == "E")
+    
+    ggplot(veg, aes(x = Species, y = mean)) +
+      geom_col(aes(fill = Native_Status)) +
+      theme_classic() +
+      theme(axis.text.x = element_text(angle = 90)) +
+      scale_fill_manual(values = c("firebrick", "darkgreen"), name = "Native Status", label = c("Exotic", "Native")) +
+      scale_y_continuous(expand = c(0,0)) +
+      labs(title = "Percent Cover", x = "Species", y = "Mean Percent Cover")
+   
+  })
+  
+  output$veg_line <- renderPlot({
+    ggplot(san_miguel_native, aes_string(x = input$x)) +
+      geom_line(aes(y = total, color = Native_Status, group = Native_Status)) +
+      theme_classic() +
+      theme(axis.text.x = element_text(angle = 90)) +
+      scale_color_manual(values = c("firebrick", "darkgreen"), name = "Native Status", label = c("Exotic", "Native")) +
+      scale_y_continuous(expand = c(0,0)) +
+      labs(title = "Percent Cover", x = "Date", y = "Mean Percent Cover")
+  })
+}
+
+# Run the application 
+shinyApp(ui = ui, server = server)
+
+
