--- a/data_wrangling.Rmd
+++ b/data_wrangling.Rmd
@@ -50,12 +50,13 @@ rownames(manzanita_hydro_master) <- manzanita_hydro_master$start_date
 
 san_miguel_hydro <- manzanita_hydro %>% 
   filter(Pool == "San Miguel") %>% 
-  ggplot(aes(x = start_date, y = Depth)) +
-  geom_col(fill = "darkblue") +
-  geom_path(aes(group = NULL)) +
+  mutate(date = as.Date(start_date, "%m/%d/%y")) %>% 
+  ggplot(aes(x = date, y = Depth)) +
+  geom_path(col = "darkblue", size = 1) +
     labs(title = "Hydroperiod", y = "Depth (in)", x = "Date") +
   theme_classic() +
   scale_y_continuous(expand = c(0,0), lim = c(0, 17)) +
+  scale_x_date(breaks = waiver(), date_breaks = "1 month") +
   theme_classic() +
   theme(axis.text.x = element_text(angle = 90))
 san_miguel_hydro
