--- a/data_wrangling.Rmd
+++ b/data_wrangling.Rmd
@@ -14,6 +14,7 @@ library(shinythemes)
 library(RColorBrewer)
 library(knitr)
 library(kableExtra)
+library(scales)
 
 manzanita_veg_master <- read_csv("manzanita_03_06_copy.csv")
 metadata_master <- read_csv("manz_metadata.csv")
